fixed height on mobile text area

--- a/styles/main.css
+++ b/styles/main.css
@@ -208,7 +208,7 @@ a:hover {
         display: inline;
     }
     .form-message {
-        height: 200px;
+        height: 200px !important;
         /* height: 40%; */
     }
     .say-hi {
